[gd_scene load_steps=10 format=3 uid="uid://d2lue1do4xb3"]

[ext_resource type="Shader" path="res://shaders/wave.gdshader" id="1_5fmtw"]
[ext_resource type="Script" path="res://scripts/Controls/DeathScreen.gd" id="1_qibou"]
[ext_resource type="Theme" uid="uid://dh6pnwbjniwke" path="res://themes/TitleTExt.tres" id="2_htspp"]
[ext_resource type="PackedScene" uid="uid://bkckxcwup4pfa" path="res://scenes/Controls/MenuButton.tscn" id="3_f0g2p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jxllt"]
shader = ExtResource("1_5fmtw")
shader_parameter/frequency = 2.0
shader_parameter/amount = 4.0

[sub_resource type="Animation" id="Animation_xr3ys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eo8ti"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.513726)]
}

[sub_resource type="Animation" id="Animation_6qr1p"]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.513726), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lawxd"]
_data = {
"Hide": SubResource("Animation_6qr1p"),
"RESET": SubResource("Animation_xr3ys"),
"Show": SubResource("Animation_eo8ti")
}

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qibou")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -430.0
offset_top = -63.5
offset_right = 430.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
texture_filter = 1
material = SubResource("ShaderMaterial_jxllt")
layout_mode = 2
theme = ExtResource("2_htspp")
text = "You're dead!"

[node name="RestartButton" parent="VBoxContainer" instance=ExtResource("3_f0g2p")]
layout_mode = 2

[node name="Button" parent="VBoxContainer/RestartButton" index="0"]
text = "Restart"

[node name="QuitToMenuButton" parent="VBoxContainer" instance=ExtResource("3_f0g2p")]
layout_mode = 2

[node name="Button" parent="VBoxContainer/QuitToMenuButton" index="0"]
text = "Quit to menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lawxd")
}

[editable path="VBoxContainer/RestartButton"]
[editable path="VBoxContainer/QuitToMenuButton"]
